# daily-digest

./: .gitignore  .gitkeep  =0.28.0  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: digest.yml
daily_digest/: reporter.py  translate.py  web_gen.py
daily_digest/fetchers/: base.py  hackernews.py  rss.py
site/: 2026-05-14.html  archive.html  index.html
src/daily_digest/: classifier.py  fetcher_factory.py  main.py  models.py  storage.py
src/daily_digest/fetchers/: github.py
