[project]
name = "daily-digest"
version = "0.1.0"
description = "每日信息聚合工具"
requires-python = ">=3.11"
packages = ["daily_digest", "daily_digest.fetchers"]
dependencies = [
    "httpx>=0.28.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.0",
    "markdown>=3.6.0",
]

[project.scripts]
daily-digest = "daily_digest.main:main"
